# YouTube-Study-Buddy

./: .env.debug.example  .env.example  .gitattributes  .gitignore  .npmignore  AGENT_TASK.md  AGENT_TASK_PARALLEL_PROCESSING.md  AGENT_TASK_YTDLP_FALLBACK.md  CHANGELOG.md  CHANGES_SUMMARY.md  CLAUDE.md  DEBUG.md  DOCKER.md  Dockerfile  FEATURE_BRANCH_SUMMARY.md  FIXES_APPLIED.md  LICENSE  PARALLEL_ARCHITECTURE_ANALYSIS.md  PER_WORKER_TOR_CONNECTIONS.md  PLAN.md  README.md  RETRY_GUIDE.md  TESTING.md  TOR_SETUP.md  architecture.puml  build-image.sh  check_failures.py  cleanup-docker-images.sh  debug_cli.py  debug_main.py  diagnose_tor.py  docker-compose-separate-tor.yml  docker-compose.dev.yml  docker-compose.yml  entrypoint-python-tor.sh  entrypoint.sh  example_job_logging.py  fix_existing_notes.py  main.py  package.json  (+12 more)
.run/: CLI - Help.run.xml  CLI - Parallel Processing.run.xml  CLI - Single Video.run.xml  CLI - With Subject.run.xml  Debug CLI Wrapper.run.xml
debug_logs/: api_responses_20251017_090128.jsonl
docs/: BUILD_INSTRUCTIONS.md  DEBUG.md  DEBUG_LOGGING_GUIDE.md  DOCKER_PROOF.md  DOCKER_SETUP.md  JOB_LOGGING_GUIDE.md  QUICKSTART.md  QUICK_DEBUG_REFERENCE.md  RAG_API.md  RAG_DEVELOPER_GUIDE.md  RAG_USER_GUIDE.md  README.md  SCRAPER_IMPLEMENTATION_PLAN.md  SOLUTION_SUMMARY.md  STATELESS_PIPELINE_ARCHITECTURE.md  TODO.md  TOR_EXIT_NODES_EXPLAINED.md  TOR_SETUP.md  TOR_STATUS.md  WHY_SEPARATE_CONTAINERS.md  WHY_SEPARATE_TOR_WORKS_BETTER.md  YOUTUBE_BLOCKING_ISSUE.md  architecture.md  debugging.md  electron-desktop-app.md  pdf-export.md  python-packaging-guide.md  rag-design.md  rag-integration.md  rag-research.md  tor-exit-node-faq.md
electron/: README.md  main.js  preload.js
learning/: 01_semantic_similarity_exploration.ipynb  02_assessment_generation_lab.ipynb
scripts/: README.md  build-image.sh  check_rag_health.sh  cleanup-docker-images.sh  debug_cli.py  diagnose_failures.py  evaluate_rag.py  fix_and_test.sh  fix_permissions.sh  maintain_vector_store.py  manage_rag_volumes.sh  migrate_notes_to_rag.py  query_rag_interactive.py  rag_poc.py  run_with_tor.sh  setup_tor_control.sh  setup_tor_control_auto.sh  test_simple.py  (+4 more)
(+72 files in other folders)
