[tool.poetry]
name = "yt-study-buddy"
version = "0.1.0"
description = "YouTube transcript to study notes converter with AI integration"
authors = ["Justin Robinson <justin.g.robinson@gmail.com>"]
readme = "README.md"
packages = [{ include = "yt_study_buddy", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
youtube-transcript-api = "^0.6.2"
anthropic = "^0.25.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
urllib3 = "^2.0.0"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
yt-study-buddy = "yt_study_buddy.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"